--- a/style.css
+++ b/style.css
@@ -130,22 +130,7 @@ body {
 }
 
 .lista__link a{
-    text-decoration: none;root {
-        --branco-principal: #FFFFFF;
-        --cinza-secundario: #C0C0C0;
-        --botao-azul: #167BF7;
-        --cor-de-fundo: #00030C;
-        --fonte-principal: 'Inter';
-    }
-    
-    body {
-        background-color: var(--cor-de-fundo);
-    …    margin-top: 1em;
-    }
-    
-    .container__descricao {
-        padding: 2em;
-    }
+    text-decoration: none;
     color: var(--branco-principal);
     margin-left: 1em;
 }
@@ -167,3 +152,4 @@ body {
 .container__botao:hover {
     background-color: var(--botao-azul-efeito);
     color: var(--cor-de-fundo);
+}
